--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "nodemon --watch ./server --exec \"node ./server/app.js\"",
     "start": "node ./server/app.js",
     "pretest": "eslint ./server --fix",
-    "test": "echo \"Tests complete\""
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,8 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
+    "expect.js": "^0.3.1",
+    "mocha": "^7.1.2",
     "nodemon": "^2.0.3"
   },
   "dependencies": {
