--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "eslint-plugin-import": "^2.20.2",
     "expect.js": "^0.3.1",
     "mocha": "^7.1.2",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
