--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   "description": "Polling application built in Node",
   "main": "./server/app.js",
   "scripts": {
-    "watch": "nodemon --watch ./server --exec \"node ./server/app.js\"",
-    "start": "node ./server/app.js",
-    "pretest": "eslint ./server --fix",
-    "test": "mocha"
+    "start": "nps",
+    "test": "nps test"
   },
   "repository": {
     "type": "git",
@@ -34,14 +32,21 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-watch": "^6.0.1",
     "expect.js": "^0.3.1",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
+    "nps-utils": "^1.7.0",
+    "to-string-loader": "^1.1.6",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
