--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
         "no-param-reassign": [ "error", { "props": true, "ignorePropertyModificationsFor": ["schema"] } ],
         "func-names": [ "error", "as-needed" ],
         "no-underscore-dangle": "off",
-        "indent": [ "error", 2, { "VariableDeclarator": 2 } ]
+        "indent": [ "error", 2, { "VariableDeclarator": 2 } ],
+        "import/no-extraneous-dependencies": [ "error", { "devDependencies": [ "**/*.test.js" ] } ]
     }
 }
