--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-mocha": "^6.3.0",
     "eslint-watch": "^6.0.1",
     "expect.js": "^0.3.1",
     "mocha": "^7.1.2",
