--- a/package.json
+++ b/package.json
@@ -29,15 +29,18 @@
   "homepage": "https://github.com/rimij405/igme430-pollr#readme",
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-mocha": "^6.3.0",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-watch": "^6.0.1",
     "expect.js": "^0.3.1",
     "mocha": "^7.1.2",
