--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-watch": "^6.0.1",
     "expect.js": "^0.3.1",
+    "handlebars": "^4.7.6",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
     "nps-utils": "^1.7.0",
