--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -20,6 +20,12 @@
         "indent": [ "error", 2, { "VariableDeclarator": 2 } ],
         "import/no-unresolved": [ 1 ],
         "no-console": 0,
+        "max-len": 0,
+        "react/prop-types": 0,
+        "import/no-duplicates": 1,
+        "eqeqeq": 1,
+        "no-unused-vars": 1,
+        "import/extensions": 1,
     },
     "settings": {
         "react": {
