--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -18,14 +18,14 @@
         "func-names": [ "error", "as-needed" ],
         "no-underscore-dangle": [ "warn", { "allow": [ "_id" ] } ],
         "indent": [ "error", 2, { "VariableDeclarator": 2 } ],
-        "import/no-unresolved": [ 1 ],
         "no-console": 0,
         "max-len": 0,
-        "react/prop-types": 0,
-        "import/no-duplicates": 1,
+        "react/prop-types": [ 1 ],
         "eqeqeq": 1,
         "no-unused-vars": 1,
-        "import/extensions": 1,
+        "import/extensions": 0,
+        "import/no-unresolved": 0,
+        "import/no-extraneous-dependencies": 0,
     },
     "settings": {
         "react": {
