--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
     "nps-utils": "^1.7.0",
+    "style-loader": "^1.2.1",
     "to-string-loader": "^1.1.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
