--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "handlebars": "^4.7.6",
     "mocha": "^7.1.2",
     "nodemon": "^2.0.3",
-    "nps-utils": "^1.7.0",
     "style-loader": "^1.2.1",
     "to-string-loader": "^1.1.6",
     "webpack": "^4.43.0",
@@ -67,6 +66,8 @@
     "express-session": "^1.17.1",
     "helmet": "^3.22.0",
     "mongoose": "^5.9.9",
+    "nps": "^5.9.12",
+    "nps-utils": "^1.7.0",
     "redis": "^3.0.2",
     "serve-favicon": "^2.5.0",
     "underscore": "^1.10.2"
