--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "Polling application built in Node",
   "main": "./server/app.js",
   "scripts": {
-    "start": "nps",
+    "start": "node ./server/app.js",
     "test": "nps test"
   },
   "repository": {
